Added multiple frontend components, made changes to the pricing profile route

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@nextui-org/react": "^2.6.11",
+    "@headlessui/react": "^2.2.0",
     "@prisma/client": "^6.2.1",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.13",
