--- a/package.json
+++ b/package.json
@@ -16,28 +16,26 @@
     "@headlessui/react": "^2.2.0",
     "@prisma/client": "^6.2.1",
     "classnames": "^2.5.1",
-    "dayjs": "^1.11.13",
     "decimal.js": "^10.4.3",
-    "next": "15.1.4",
+    "next": "^15.1.4",
     "prisma": "^6.2.1",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "redoc": "^2.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-select": "^5.9.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-react": "^5.18.2"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@eslint/eslintrc": "^3.2.0",
+    "@types/node": "^22.10.5",
+    "@types/react": "^19.0.4",
+    "@types/react-dom": "^19.0.2",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-react": "^4.18.3",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.4",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "ts-node": "^10.9.2",
-    "typescript": "^5"
+    "eslint": "^9.18.0",
+    "eslint-config-next": "^15.1.4",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.7.3"
   }
 }
