--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "prisma": "^6.2.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2",
     "react-select": "^5.9.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-react": "^5.18.2"
@@ -36,6 +37,7 @@
     "eslint-config-next": "^15.1.4",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
+    "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
   }
 }
