--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@headlessui/react": "^2.2.0",
     "@prisma/client": "^6.2.1",
+    "@tanstack/react-table": "^8.20.6",
     "classnames": "^2.5.1",
     "decimal.js": "^10.4.3",
     "next": "^15.1.4",
@@ -22,7 +22,6 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
-    "react-select": "^5.9.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-react": "^5.18.2"
   },
