--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev && npm run prisma:generate",
     "db:seed": "ts-node prisma/seed/index.ts",
-    "db:reset": "rm -f ./prisma/dev.db && npm run prisma:migrate && npm run db:seed",
+    "db:reset": "prisma migrate reset && npm run prisma:migrate && npm run db:seed",
     "tsc": "tsc",
     "build": "npm run db:reset && next build",
+    "postinstall": "prisma generate",
     "start": "next start",
     "lint": "next lint"
   },
