--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "db:reset": "rm -f ./prisma/dev.db && npm run prisma:migrate && npm run db:seed",
     "tsc": "tsc",
     "build": "npm run db:reset && next build",
-    "postinstall": "npm run prisma:migrate",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.10.0",
     "@prisma/client": "^6.2.1",
     "@tanstack/react-table": "^8.20.6",
     "classnames": "^2.5.1",
@@ -24,8 +24,10 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
+    "react-toastify": "^11.0.2",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-react": "^5.18.2"
+    "swagger-ui-react": "^5.18.2",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
